# RikZal

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  package.json  pyproject.toml
.claude/: architecture.md  launch.json  vision.md
crates/rikzal-daemon/: Cargo.toml
crates/rikzal-daemon/src/: main.rs  tray.rs
crates/rikzal-daemon/src/db/: mod.rs
crates/rikzal-daemon/src/ipc/: mod.rs  protocol.rs
crates/rikzal-daemon/src/os/: mod.rs
crates/rikzal-tauri/: Cargo.toml
crates/rikzal-tauri/src/: main.rs
scripts/: dev.sh
ui/: index.html  package.json  pnpm-lock.yaml
ui/src/: index.css  main.tsx
ui/src/lib/: types.ts
ui/src/store/: atoms.ts
ui/src/windows/: MorningBrief.tsx  Sidebar.tsx
