[package]
name = "rikzal-daemon"
version.workspace = true
edition = "2021"

[[bin]]
name = "rikzal-daemon"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rmp-serde = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tray-icon = "0.21"
notify = "8"
dirs = "6"
rusqlite = { version = "0.32", features = ["bundled"] }
